modify:完成了Tree::build（）

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0)
 #项目名称
 project(imgTree)
 #添加宏：DEBUG
-add_definitions(-DDEBUG)
+#add_definitions(-DDEBUG)
 #包含头文件库
 include_directories(./include)
 #添加源文件
