modify:some improve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 #cmake最小版本设置
 cmake_minimum_required(VERSION 3.0)
 #项目名称
-project(imgTree)
+project(fileTree)
 #添加宏：DEBUG
 #add_definitions(-DDEBUG)
 #包含头文件库
@@ -10,4 +10,4 @@ include_directories(./include)
 aux_source_directory(./src/main SRCS)
 aux_source_directory(./src/tree SRCS)
 #build
-add_executable(imgTree ${SRCS})
+add_executable(fileTree ${SRCS})
